// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select basic 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #865CD6;
  stroke: #865CD6;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  color: #444444;
  border: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  margin: 0;
  padding: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: 12px;
  margin-right: 12px;
  padding: 0;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c3 {
  position: relative;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  padding: 11px;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  outline: none;
  background: transparent;
  color: inherit;
  font-weight: 600;
  margin: 0;
  width: 100%;
  -webkit-appearance: textfield;
  border: none;
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  cursor: pointer;
}

@media only screen and (max-width:699px) {
  .c1 {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .c0 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<button
  aria-label="undefined"
  className="c0"
  disabled={false}
  id="test-select"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="button"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <input
          autoComplete="off"
          className="c4 c5"
          id="test-select"
          onBlur={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          tabIndex="-1"
          type="text"
        />
      </div>
    </div>
    <div
      className="c6"
      style={
        Object {
          "minWidth": "auto",
        }
      }
    >
      <svg
        aria-label="FormDown"
        className="c7"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select complex options and children 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select complex options and children 2`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select complex options and children 3`] = `
<div
  class="StyledDrop-czaYBK isvWSD"
  id="test-select__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="SelectContainer__ContainerBox-cmlGXd bCcYNq StyledBox-YaZNy hQeqTY"
    id="test-select__select-drop"
  >
    <div
      class="SelectContainer__OptionsBox-ivZYuf dsVoEJ StyledBox-YaZNy biNMpn"
      role="menubar"
      tabindex="-1"
    >
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY hOjJXi"
          role="menuitem"
          type="button"
        >
          <span>
            one
          </span>
        </button>
      </div>
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY hOjJXi"
          role="menuitem"
          type="button"
        >
          <span>
            two
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select complex options and children 4`] = `
"@media only screen and (max-width:699px) {
  .kpElOw {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .kpElOw {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .kpElOw {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eMTjTC {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eMTjTC {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ivAcfG {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .ivAcfG {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .biNMpn {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .biNMpn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .jZaTeL {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .hOjJXi {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.isvWSD {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .isvWSD {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .bCcYNq {
    width: 100%;
  }
}"
`;

exports[`Select deselect an option 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          multiple=""
          readonly=""
          tabindex="-1"
          type="text"
          value="one"
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select disabled 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY fILeAh"
  data-testid="test-select"
  disabled=""
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select disabled 2`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY fILeAh"
  data-testid="test-select"
  disabled=""
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select multiple 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #865CD6;
  stroke: #865CD6;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  color: #444444;
  border: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  margin: 0;
  padding: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: 12px;
  margin-right: 12px;
  padding: 0;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c3 {
  position: relative;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  padding: 11px;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  outline: none;
  background: transparent;
  color: inherit;
  font-weight: 600;
  margin: 0;
  width: 100%;
  -webkit-appearance: textfield;
  border: none;
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  cursor: pointer;
}

@media only screen and (max-width:699px) {
  .c1 {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .c0 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<button
  aria-label="undefined"
  className="c0"
  disabled={false}
  id="test-select"
  multiple={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  selected={Array []}
  type="button"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <input
          autoComplete="off"
          className="c4 c5"
          id="test-select"
          multiple={true}
          onBlur={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          selected={Array []}
          tabIndex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="c6"
      style={
        Object {
          "minWidth": "auto",
        }
      }
    >
      <svg
        aria-label="FormDown"
        className="c7"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select multiple values 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          multiple=""
          readonly=""
          tabindex="-1"
          type="text"
          value="multiple"
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select multiple values 2`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          multiple=""
          readonly=""
          tabindex="-1"
          type="text"
          value="multiple"
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select multiple values 3`] = `
<div
  class="StyledDrop-czaYBK isvWSD"
  id="test-select__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="SelectContainer__ContainerBox-cmlGXd bCcYNq StyledBox-YaZNy hQeqTY"
    id="test-select__select-drop"
  >
    <div
      class="SelectContainer__OptionsBox-ivZYuf dsVoEJ StyledBox-YaZNy biNMpn"
      role="menubar"
      tabindex="-1"
    >
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY thBoX"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            <span
              class="StyledText-dmaDlZ iRQiFb"
            >
              one
            </span>
          </div>
        </button>
      </div>
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY thBoX"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            <span
              class="StyledText-dmaDlZ iRQiFb"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select multiple values 4`] = `
"@media only screen and (max-width:699px) {
  .kpElOw {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .kpElOw {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .kpElOw {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eMTjTC {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eMTjTC {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ivAcfG {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .ivAcfG {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .biNMpn {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .biNMpn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .gynikh {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gynikh {
    padding: 3px;
  }
}

@media only screen and (max-width:699px) {
  .gKIdCQ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gKIdCQ {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .jZaTeL {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .hOjJXi {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .iraIky {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .thBoX {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.isvWSD {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .isvWSD {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .bCcYNq {
    width: 100%;
  }
}"
`;

exports[`Select opens 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select opens 2`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select opens 3`] = `
<div
  class="StyledDrop-czaYBK isvWSD"
  id="test-select__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="SelectContainer__ContainerBox-cmlGXd bCcYNq StyledBox-YaZNy hQeqTY"
    id="test-select__select-drop"
  >
    <div
      class="SelectContainer__OptionsBox-ivZYuf dsVoEJ StyledBox-YaZNy biNMpn"
      role="menubar"
      tabindex="-1"
    >
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY hOjJXi"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            <span
              class="StyledText-dmaDlZ iRQiFb"
            >
              one
            </span>
          </div>
        </button>
      </div>
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY hOjJXi"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            <span
              class="StyledText-dmaDlZ iRQiFb"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select opens 4`] = `
"@media only screen and (max-width:699px) {
  .kpElOw {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .kpElOw {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .kpElOw {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eMTjTC {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eMTjTC {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ivAcfG {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .ivAcfG {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .biNMpn {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .biNMpn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .jZaTeL {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .hOjJXi {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.isvWSD {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .isvWSD {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .bCcYNq {
    width: 100%;
  }
}"
`;

exports[`Select opens 5`] = `
<div
  class="SelectContainer__OptionsBox-ivZYuf dsVoEJ StyledBox-YaZNy biNMpn"
  role="menubar"
  tabindex="-1"
>
  <div
    class="StyledBox-YaZNy ckMYwJ"
  >
    <button
      class="StyledButton-qbvYY hOjJXi"
      role="menuitem"
      type="button"
    >
      <div
        class="StyledBox-YaZNy hZNqBU"
      >
        <span
          class="StyledText-dmaDlZ iRQiFb"
        >
          one
        </span>
      </div>
    </button>
  </div>
  <div
    class="StyledBox-YaZNy ckMYwJ"
  >
    <button
      class="StyledButton-qbvYY hOjJXi"
      role="menuitem"
      type="button"
    >
      <div
        class="StyledBox-YaZNy hZNqBU"
      >
        <span
          class="StyledText-dmaDlZ iRQiFb"
        >
          two
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Select search 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select search 2`] = `
<div
  class="StyledDrop-czaYBK isvWSD"
  id="test-select__drop"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
  tabindex="-1"
>
  <div
    class="SelectContainer__ContainerBox-cmlGXd bCcYNq StyledBox-YaZNy hQeqTY"
    id="test-select__select-drop"
  >
    <div
      class="StyledBox-YaZNy gynikh"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="StyledTextInput-bqUxsy lmQzlX"
          type="search"
          value=""
        />
      </div>
    </div>
    <div
      class="SelectContainer__OptionsBox-ivZYuf dsVoEJ StyledBox-YaZNy biNMpn"
      role="menubar"
      tabindex="-1"
    >
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY hOjJXi"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            <span
              class="StyledText-dmaDlZ iRQiFb"
            >
              one
            </span>
          </div>
        </button>
      </div>
      <div
        class="StyledBox-YaZNy ckMYwJ"
      >
        <button
          class="StyledButton-qbvYY hOjJXi"
          role="menuitem"
          type="button"
        >
          <div
            class="StyledBox-YaZNy hZNqBU"
          >
            <span
              class="StyledText-dmaDlZ iRQiFb"
            >
              two
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select search 3`] = `
"@media only screen and (max-width:699px) {
  .kpElOw {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .kpElOw {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .kpElOw {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .eMTjTC {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .eMTjTC {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ivAcfG {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .ivAcfG {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hQeqTY {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .biNMpn {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .biNMpn {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .ckMYwJ {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .hZNqBU {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .gynikh {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .gynikh {
    padding: 3px;
  }
}

@media only screen and (min-width:700px) {
  .jZaTeL {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .hOjJXi {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.isvWSD {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  outline: none;
  background: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .isvWSD {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
  }
}

@media screen and (-ms-high-contrast:active),(-ms-high-contrast:none) {
  .bCcYNq {
    width: 100%;
  }
}"
`;

exports[`Select select an option 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select select an option with complex options 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy gKIdCQ"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <span>
        one
      </span>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select select an option with enter 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select select another option 1`] = `
<button
  aria-label="undefined"
  class="StyledButton-qbvYY jZaTeL"
  data-testid="test-select"
  id="test-select"
  type="button"
>
  <div
    class="StyledBox-YaZNy kpElOw"
  >
    <div
      class="StyledBox-YaZNy eMTjTC"
    >
      <div
        class="StyledTextInput__StyledTextInputContainer-gOoAsL egTPoR"
      >
        <input
          autocomplete="off"
          class="Select__SelectTextInput-eJgcSa nKUgh StyledTextInput-bqUxsy dKOtVo"
          data-testid="test-select"
          id="test-select"
          multiple=""
          readonly=""
          tabindex="-1"
          type="text"
          value="two"
        />
      </div>
    </div>
    <div
      class="StyledBox-YaZNy ivAcfG"
      style="min-width: auto;"
    >
      <svg
        aria-label="FormDown"
        class="StyledIcon-hcpUvT bAonn"
        color="#865CD6"
        height="24px"
        role="img"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          stroke-width="2"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select size 1`] = `
.c7 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 48px;
  height: 48px;
  fill: #865CD6;
  stroke: #865CD6;
}

.c7 g {
  fill: inherit;
  stroke: inherit;
}

.c7 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c7 *[stroke*="#"],
.c7 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c7 *[fill-rule],
.c7 *[FILL-RULE],
.c7 *[fill*="#"],
.c7 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #ffffff;
  color: #444444;
  border: solid 1px rgba(0,0,0,0.33);
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  margin: 0;
  padding: 0;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-left: 12px;
  margin-right: 12px;
  padding: 0;
}

.c0 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
}

.c3 {
  position: relative;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  padding: 11px;
  border: 1px solid rgba(0,0,0,0.33);
  border-radius: 4px;
  outline: none;
  background: transparent;
  color: inherit;
  font-weight: 600;
  margin: 0;
  width: 100%;
  -webkit-appearance: textfield;
  font-size: 24px;
  line-height: 1.167;
  border: none;
  -webkit-appearance: none;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4 {
  cursor: pointer;
}

@media only screen and (max-width:699px) {
  .c1 {
    border: solid 1px rgba(0,0,0,0.33);
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c1 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .c2 {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    margin-left: 6px;
    margin-right: 6px;
  }
}

@media only screen and (max-width:699px) {
  .c6 {
    padding: 0;
  }
}

@media only screen and (min-width:700px) {
  .c0 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<button
  aria-label="undefined"
  className="c0"
  disabled={false}
  id="test-select"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  selected={Array []}
  type="button"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <input
          autoComplete="off"
          className="c4 c5"
          id="test-select"
          onBlur={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          selected={Array []}
          size="large"
          tabIndex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="c6"
      style={
        Object {
          "minWidth": "auto",
        }
      }
    >
      <svg
        aria-label="FormDown"
        className="c7"
        color="#865CD6"
        height="24px"
        role="img"
        size="large"
        version="1.1"
        viewBox="0 0 24 24"
        width="24px"
      >
        <polyline
          fill="none"
          points="18 9 12 15 6 9"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </div>
</button>
`;
